@@ -7,6 +7,8 @@ intptr_t __cdecl _wfindfirst64i32(const wchar_t *_Filename,struct _wfinddata64i3
 {
   struct _wfinddata64_t fd;
   intptr_t ret = _wfindfirst64(_Filename,&fd);
+  if (ret == -1)
+    return -1;
   _FindData->attrib=fd.attrib;
   _FindData->time_create=fd.time_create;
   _FindData->time_access=fd.time_access;
