@@ -7,6 +7,8 @@ int __cdecl _wfindnext64i32(intptr_t _FindHandle,struct _wfinddata64i32_t *_Find
 {
   struct _wfinddata64_t fd;
   int ret = _wfindnext64(_FindHandle,&fd);
+  if (ret == -1)
+    return -1;
   _FindData->attrib=fd.attrib;
   _FindData->time_create=fd.time_create;
   _FindData->time_access=fd.time_access;
