@@ -262,6 +262,8 @@ _CRTIMP char* __cdecl _getcwd (char*, int);
   {
     struct __finddata64_t fd;
     intptr_t ret = _findfirst64(_Filename,&fd);
+    if (ret == -1)
+      return -1;
     _FindData->attrib=fd.attrib;
     _FindData->time_create=fd.time_create;
     _FindData->time_access=fd.time_access;
@@ -279,6 +281,8 @@ _CRTIMP char* __cdecl _getcwd (char*, int);
   {
     struct __finddata64_t fd;
     int ret = _findnext64(_FindHandle,&fd);
+    if (ret == -1)
+      return -1;
     _FindData->attrib=fd.attrib;
     _FindData->time_create=fd.time_create;
     _FindData->time_access=fd.time_access;
